--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ if (IS_IOS) {
         if (promo_id) {
         	window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimbmalaysia;scheme=cimbdeals;launchFlags=268435456;end;';
 		} else {
-			window.location = 'intent://view#Intent;package=com.cimbmalaysia;scheme=cimbdeals;launchFlags=268435456;end;';
+			window.location = 'intent://view/#Intent;package=com.cimbmalaysia;scheme=cimbdeals;launchFlags=268435456;end;';
 		}
 } else {
 		window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
