--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:card" content="photo">
 <meta name="twitter:site" content="@nytimes">
 <meta name="twitter:creator" content="@SarahMaslinNir">
 <meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
