--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 <html>
 <head>
-<meta name="twitter:app:country" content="MY" />
-<meta name="twitter:app:name:iphone" content="CIMB Deals" />
-<meta name="twitter:app:id:iphone" content="960973250" />
-<meta name="twitter:app:url:iphone" content="cimbdeals://promotion?id=XXX" />
-<meta name="twitter:app:name:googleplay" content="CIMB Deals" />
-<meta name="twitter:app:id:googleplay" content="net.cyber_village.creditcard" />
-<meta name="twitter:app:url:googleplay" content="cimbdeals://promotion?id=XXX" />
-	
 <script>
 
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
@@ -26,7 +18,8 @@ if (IS_IOS) {
         }
     
         setTimeout(function() {
-            if (!document.webkitHidden) {
+            //if (!document.webkitHidden) {
+            if (document.webkitHidden||document.hidden) {
                 window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
             }
         }, 25);
