--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ if (IS_IOS) {
     
         setTimeout(function() {
             //if (!document.webkitHidden) {
-            if !(document.webkitHidden||document.hidden) {
+            if (!(document.webkitHidden||document.hidden)) {
                 window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
             }
         }, 25);
