--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
 
 if (IS_IOS) {
-		if (promo_id) {
+	  window.addEventListener("pageshow", function(evt){
+        alert("pageshow");
+    }, false);
+
+    window.addEventListener("pagehide", function(evt){
+       alert("pagehide");
+    }, false);
+	
+	
+	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
         } else {
         	window.location = "cimbdeals://view";
         }
     
         setTimeout(function() {
-            //if (!document.webkitHidden) {
-            if (!(document.webkitHidden||document.hidden)) {
+            if (!document.webkitHidden) {
                 window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
             }
         }, 25);
