--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
 
 if (IS_IOS) {
+		  window.addEventListener("pageshow", function(evt){
+        alert("pageshow");
+    }, false);
+
+    window.addEventListener("pagehide", function(evt){
+       alert("pagehide");
+    }, false);
+	
+	/*
 	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
         } else {
@@ -21,7 +30,7 @@ if (IS_IOS) {
             if (!document.webkitHidden) {
                 window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
             }
-        }, 25);
+        }, 25);*/
 } else if (IS_ANDROID) {    
 	 if (promo_id) {
         		//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
