--- a/index.html
+++ b/index.html
@@ -40,19 +40,9 @@ if (IS_IOS) {
 			window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
 		}
 } else {
-		window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	alert("no");
+		//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
-
-
-/*
-	if (navigator.userAgent.match(/Android/i)) {            
-		document.location.href = "https://play.google.com/store/apps/details?id=com.cimbdeals";
-	} else if (navigator.userAgent.match(/iPhone|iPad|iPod/i)) {
-        document.location.href = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
-	} else {
-        document.location.href = "https://play.google.com/store/apps/details?id=com.cimbdeals";
-        }
-*/
 </script>
 </head>
 </html>
