--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
 
 if (IS_IOS) {
+	var done=false;
 		  window.addEventListener("pageshow", function(evt){
+		  	if (!done) {
         document.body.text='red';
+        done=true;
+		  	}
     }, false);
 
     window.addEventListener("pagehide", function(evt){
        document.body.text='blue';
     }, false);
 	
-	/*
+	
 	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
         } else {
         	window.location = "cimbdeals://view";
         }
-    
+    /*
         setTimeout(function() {
             if (!document.webkitHidden) {
                 window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
