--- a/index.html
+++ b/index.html
@@ -11,41 +11,30 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
 
 if (IS_IOS) {
-	var done=false;
-		  window.addEventListener("pageshow", function(evt){
-		  	if (!done) {
-        document.body.text='red';
-        done=true;
-		  	}
-    }, false);
-
-    window.addEventListener("pagehide", function(evt){
-       document.body.text='blue';
-    }, false);
-	
-	
+	document.body = navigator.userAgent;
+	/*
 	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
         } else {
         	window.location = "cimbdeals://view";
         }
-    /*
+
         setTimeout(function() {
             if (!document.webkitHidden) {
                 window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
             }
         }, 25);*/
 } else if (IS_ANDROID) {    
-	 if (promo_id) {
-        		//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
-        		window.location = 'intent://promotion?id='+promo_id+'#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
-		} else {
-			//window.location = 'intent://view/#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
-			window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
-		}
+	if (promo_id) {
+        	//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
+        	window.location = 'intent://promotion?id='+promo_id+'#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+	} else {
+		//window.location = 'intent://view/#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
+		window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+	}
 } else {
 	document.body.text='green';
-		//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
 </script>
 </head>
