--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
 
 if (IS_IOS) {
-	document.body = navigator.userAgent;
+	document.body.innerHtml = navigator.userAgent;
 	/*
 	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
