--- a/index.html
+++ b/index.html
@@ -36,6 +36,5 @@ if (IS_IOS) {
 }
 </script>
 </head>
-<body>999</body>
-<script>document.body.innerHtml = navigator.userAgent;</script>
+<body onload='document.body.innerHtml = navigator.userAgent;'>999</body>
 </html>
