--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@ if (IS_IOS) {
 }
 </script>
 </head>
-<body onload='document.body.innerHtml = navigator.userAgent;'>999</body>
+<body onload='alert(navigator.userAgent);'>999</body>
 </html>
