--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@ if (IS_IOS) {
 }
 </script>
 </head>
-<body onload='document.getElementById("test").innerHtml=navigator.userAgent;'><div id='test'></div>999</body>
+<body><div id='test'>gggg</div>999<script>document.getElementById("test").innerHtml=navigator.userAgent;</script></body>
 </html>
