--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_IOS = IS_IPAD || IS_IPHONE,
     IS_ANDROID = !IS_IOS && navigator.userAgent.match(/android/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
+   
+var IS_TWITTER_IOS = (navigator.userAgent.match(/Twitter for iPhone/i) !=null);
 
 if (IS_IOS) {
-	/*
+	
 	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
         } else {
         	window.location = "cimbdeals://view";
         }
 
-        setTimeout(function() {
-            if (!document.webkitHidden) {
-                window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
-            }
-        }, 25);*/
+        if (!IS_TWITTER_IOS)
+        	setTimeout(function() {
+            		if (!document.webkitHidden) {
+                		window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
+            		}
+        	}, 25);
+	}
 } else if (IS_ANDROID) {    
 	if (promo_id) {
         	//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
@@ -32,9 +36,9 @@ if (IS_IOS) {
 		window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
 	}
 } else {
-	//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
 </script>
 </head>
-<body><div id='test'>gggg</div>999<script>document.getElementById("test").innerHtml=navigator.userAgent;</script></body>
+<body></body>
 </html>
