--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ if (IS_IOS) {
         	window.location = "cimbdeals://view";
         }
 
-        if (!IS_TWITTER_IOS)
+        if (!IS_TWITTER_IOS) {
         	setTimeout(function() {
             		if (!document.webkitHidden) {
                 		window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
