--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<meta name="twitter:card" content="app">
-<meta name="twitter:site" content="@yusiang81">
+<meta name="twitter:card" content="app" />
+<meta name="twitter:site" content="@yusiang81" />
 <meta name="twitter:app:country" content="MY" />
 <meta name="twitter:app:name:iphone" content="CIMB Deals" />
 <meta name="twitter:app:id:iphone" content="960973250" />
