--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
 
 //var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
-var promo_id = window.location.split(#)[1];
+var promo_id = window.location.split('#')[1];
 alert(promo_id);
 
 var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
