--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
 //var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
 var promo_id = window.location.href.split('#')[1];
-alert(promo_id);
+
+if (promo_id) {
+	alert(promo_id);
+} else {
+	alert('no promo');
+}
+
 
 var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_IPHONE = !IS_IPAD && ((navigator.userAgent.match(/iPhone/i) != null) || (navigator.userAgent.match(/iPod/i) != null)),
