--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta name="twitter:site" content="@yusiang81" />
 <meta name="twitter:app:country" content="MY" />
 <meta name="twitter:app:name:iphone" content="CIMB Deals" />
-<meta name="twitter:app:id:iphone" content="960973250" />
+<!--<meta name="twitter:app:id:iphone" content="960973250" />-->
+<meta name="twitter:app:id:iphone" content="328803038" />
 <meta name="twitter:app:url:iphone" content="cimbdeals://promotion?id=XXX" />
 <meta name="twitter:app:name:googleplay" content="CIMB Deals" />
 <meta name="twitter:app:id:googleplay" content="net.cyber_village.creditcard" />
