--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="title here" />
+<meta name="twitter:description" content="description here" />
 <meta name="twitter:site" content="@yusiang81" />
 <meta name="twitter:app:country" content="MY" />
 <meta name="twitter:app:name:iphone" content="CIMB Deals" />
