--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="title here" />
 <meta name="twitter:description" content="description here" />
-<meta name="twitter:image" content="https://a1.muscache.com/ac/pictures/78121261/301d34a6_original.jpg" />
+<meta name="twitter:image" content="https://pbs.twimg.com/media/CHwIJqsUwAAo5eM.png" />
 <meta name="twitter:site" content="@yusiang81" />
 <meta name="twitter:app:country" content="MY" />
 <meta name="twitter:app:name:iphone" content="CIMB Deals" />
