--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="photo" />
 <meta name="twitter:title" content="title here" />
 <meta name="twitter:description" content="description here" />
 <meta name="twitter:image" content="https://pbs.twimg.com/media/CHwOFBxUMAAeAuM.jpg:large" />
