--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:title" content="title here" />
 <meta name="twitter:description" content="description here" />
-<meta name="twitter:image" content="https://pbs.twimg.com/media/CHwOFBxUMAAeAuM.jpg:large" />
+<meta name="twitter:image" content="http://49.50.12.48/CCMAImages/promotion_images/He315a6e8-bb41-453f-a4c5-232972fc83afayamas.png" />
 <meta name="twitter:site" content="@yusiang81" />
 <meta name="twitter:app:country" content="MY" />
 <meta name="twitter:app:name:iphone" content="CIMB Deals" />
