--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
 <meta name="twitter:card" content="photo" />
-<meta name="twitter:title" content="title here" />
+<!--<meta name="twitter:title" content="title here" /> -->
+<script>
+  var m = document.createElement('meta'); 
+  m.name = 'twitter:title'; 
+  m.content = 'dynamic title'; 
+  document.head.appendChild(m);
+</script>
 <meta name="twitter:description" content="description here" />
 <meta name="twitter:image" content="http://49.50.12.48/CCMAImages/promotion_images/He315a6e8-bb41-453f-a4c5-232972fc83afayamas.png" />
 <meta name="twitter:site" content="@yusiang81" />
