--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
 
-if (promo_id!=null) {
+if (promo_id==null) {
     promo_id = window.location.href.split('#')[1];
 }
 
