--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script>
 
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
-
+alert(promo_id);
 if (promo_id==null) {
     promo_id = window.location.href.split('#')[1];
 }
