--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
 
 if (promo_id==null) {
+	alert("null");
     promo_id = window.location.href.split('#')[1];
 }
 
