--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <script>
 
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
-
-if (promo_id.trim()==null) {
-	alert("null");
+alert(promo_id);
+if (!promo_id) {
     promo_id = window.location.href.split('#')[1];
 }
 
