--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ if (IS_IOS) {
 		window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
 	}
 } else {
-	window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
 </script>
 </head>
