--- a/index.html
+++ b/index.html
@@ -42,5 +42,10 @@ if (IS_IOS) {
 }
 </script>
 </head>
-<body></body>
+<body>
+<div style="display: block; text-align: center;">
+  <a id="downloadButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 1em; padding: 1em 2em; width: auto;" href="#">Download CIMB Deals</a>
+</div>
+	
+</body>
 </html>
