--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script>
+var destination;
 
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
 if (!promo_id) {
@@ -16,6 +17,8 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
 var IS_TWITTER_IOS = (navigator.userAgent.match(/Twitter for iPhone/i) !=null);
 
 if (IS_IOS) {
+	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	
 	if (promo_id) {
         	window.location = "cimbdeals://promotion?id="+promo_id;
         } else {
@@ -29,7 +32,9 @@ if (IS_IOS) {
             		}
         	}, 25);
 	}
-} else if (IS_ANDROID) {    
+} else if (IS_ANDROID) {
+	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
+	
 	if (promo_id) {
         	//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
         	window.location = 'intent://promotion?id='+promo_id+'#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
@@ -38,6 +43,7 @@ if (IS_IOS) {
 		window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
 	}
 } else {
+	destination = "http://www.google.com";
 	//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
 </script>
@@ -46,6 +52,6 @@ if (IS_IOS) {
 <div style="display: block; text-align: center;">
   <a id="downloadButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 1em; padding: 1em 2em; width: auto; background-color: #2c7caa;  color: #fff !important; text-decoration:none;" href="#">Download CIMB Deals</a>
 </div>
-	
+<script>document.getElementById('downloadButton').href=destination;</script>	
 </body>
 </html>
