--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ if (IS_IOS) {
 		window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
 	}
 } else {
-	destination = "http://www.google.com";
-	//window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
 </script>
 </head>
