--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <html>
 <head>
+<meta name="twitter:card" content="photo" />
+<meta name="twitter:title" content="title here" />
+<meta name="twitter:description" content="description here" />
+<meta name="twitter:image" content="http://49.50.12.48/CCMAImages/promotion_images/He315a6e8-bb41-453f-a4c5-232972fc83afayamas.png" />
+<meta name="twitter:site" content="@cimbdeals" />
+<meta name="twitter:app:country" content="MY" />
+<meta name="twitter:app:name:iphone" content="CIMB Deals" />
+<!--<meta name="twitter:app:id:iphone" content="960973250" />-->
+<meta name="twitter:app:id:iphone" content="328803038" />
+<meta name="twitter:app:url:iphone" content="cimbdeals://promotion?id=XXX" />
+<meta name="twitter:app:name:googleplay" content="CIMB Deals" />
+<meta name="twitter:app:id:googleplay" content="net.cyber_village.creditcard" />
+<meta name="twitter:app:url:googleplay" content="cimbdeals://promotion?id=XXX" />
 <script>
 var destination;
 
