--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="twitter:title" content="title here" />
 <meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here." />
 <meta name="twitter:image" content="http://49.50.12.48/CCMAImages/promotion_images/He315a6e8-bb41-453f-a4c5-232972fc83afayamas.png" />
-<meta name="twitter:site" content="@yusiang" />
+<meta name="twitter:site" content="@cimbdeals_my" />
 <meta name="twitter:app:country" content="MY" />
 <meta name="twitter:app:name:iphone" content="CIMB Deals" />
 <!--<meta name="twitter:app:id:iphone" content="960973250" />-->
