--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
     IS_MOBILE = IS_IOS || IS_ANDROID;
    
 var IS_TWITTER_IOS = (navigator.userAgent.match(/Twitter for iPhone/i) !=null);
+var IS_TWITTER_ANDROID = (navigator.userAgent.match(/Twitter Android/i) !=null);
 
 if (IS_IOS) {
 	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
@@ -48,12 +49,16 @@ if (IS_IOS) {
 } else if (IS_ANDROID) {
 	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
 	
-	if (promo_id) {
-        	//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
-        	window.location = 'intent://promotion?id='+promo_id+'#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+	if (IS_TWITTER_ANDROID) {
+		window.location = "cimbdeals://promotion?id="+promo_id;
 	} else {
-		//window.location = 'intent://view/#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
-		window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+		if (promo_id) {
+	        	//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
+	        	window.location = 'intent://promotion?id='+promo_id+'#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+		} else {
+			//window.location = 'intent://view/#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
+			window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+		}
 	}
 } else {
 	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
