--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 <div style="display: block; text-align: center;">
   <a id="downloadButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 3em; padding: 1em 2em; width: auto; background-color: #2c7caa;  color: #fff !important; text-decoration:none;" href="#">Download CIMB Deals</a>
 </div>
-<script>document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';window.location.href='cimbdeals://';</script>	
+<script>document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';window.location.replace('cimbdeals://');</script>	
 </body>
 </html>
