--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <script>
 document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';
-document.getElementById('openButton').href='cimbdeals://';
+document.getElementById('openButton').href='http://yusiang.github.io';
 document.getElementById('openButton').click();
 </script>	
 </body>
