--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script>
 document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';
 document.getElementById('openButton').href='http://yusiang.github.io';
-document.getElementById('openButton').click();
+document.getElementById('downloadButton').click();
 </script>	
 </body>
 </html>
