--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </div>
 <script>
 document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';
-document.getElementById('openButton').href='http://yusiang.github.io';
-document.getElementById('downloadButton').click();
+document.getElementById('openButton').href='cimbdeals://view';
+document.getElementById('openButton').click();
 </script>	
 </body>
 </html>
