--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <script>
 document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';
-document.getElementById('openButton').href='cimbdeals://view';
+document.getElementById('openButton').href='intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
 </script>	
 </body>
 </html>
