--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <html>
 <head>
-<meta http-equiv="cache-control" content="max-age=0" />
-<meta http-equiv="cache-control" content="no-cache" />
-<meta http-equiv="expires" content="0" />
-<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-<meta http-equiv="pragma" content="no-cache" />
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:title" content="title here" />
 <meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here." />
@@ -18,18 +13,63 @@
 <meta name="twitter:app:name:googleplay" content="CIMB Deals" />
 <meta name="twitter:app:id:googleplay" content="net.cyber_village.creditcard" />
 <meta name="twitter:app:url:googleplay" content="cimbdeals://promotion?id=XXX" />
+<script>
+var destination;
+
+var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
+if (!promo_id) {
+    promo_id = window.location.href.split('#')[1];
+}
+
+var IS_IPAD = navigator.userAgent.match(/iPad/i) != null,
+    IS_IPHONE = !IS_IPAD && ((navigator.userAgent.match(/iPhone/i) != null) || (navigator.userAgent.match(/iPod/i) != null)),
+    IS_IOS = IS_IPAD || IS_IPHONE,
+    IS_ANDROID = !IS_IOS && navigator.userAgent.match(/android/i) != null,
+    IS_MOBILE = IS_IOS || IS_ANDROID;
+   
+var IS_TWITTER_IOS = (navigator.userAgent.match(/Twitter for iPhone/i) !=null);
+var IS_TWITTER_ANDROID = (navigator.userAgent.match(/Twitter Android/i) !=null);
+
+if (IS_IOS) {
+	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	
+	if (promo_id) {
+        	window.location = "cimbdeals://promotion?id="+promo_id;
+        } else {
+        	window.location = "cimbdeals://view";
+        }
+
+        if (!IS_TWITTER_IOS) {
+        	setTimeout(function() {
+            		if (!document.webkitHidden) {
+                		window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
+            		}
+        	}, 25);
+	}
+} else if (IS_ANDROID) {
+	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
+	
+	if (IS_TWITTER_ANDROID) {
+		window.location = "cimbdeals://promotion?id="+promo_id;
+	} else {
+		if (promo_id) {
+	        	//window.location = 'intent://promotion?id='+promo_id+'#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
+	        	window.location = 'intent://promotion?id='+promo_id+'#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+		} else {
+			//window.location = 'intent://view/#Intent;package=com.cimb.cimbdeals;scheme=cimbdeals;launchFlags=268435456;end;';
+			window.location = 'intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
+		}
+	}
+} else {
+	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+	window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
+}
+</script>
 </head>
 <body>
 <div style="display: block; text-align: center;">
   <a id="downloadButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 3em; padding: 1em 2em; width: auto; background-color: #2c7caa;  color: #fff !important; text-decoration:none;" href="#">Download CIMB Deals</a>
 </div>
-
-<div style="display: block; text-align: center;">
-  <a id="openButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 3em; padding: 1em 2em; width: auto; background-color: #2c7caa;  color: #fff !important; text-decoration:none;" href="#">Open CIMB Deals</a>
-</div>
-<script>
-document.getElementById('downloadButton').href='http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en';
-document.getElementById('openButton').href='intent://view/#Intent;package=net.cyber_village.creditcard;scheme=cimbdeals;launchFlags=268435456;end;';
-</script>	
+<script>document.getElementById('downloadButton').href=destination;</script>	
 </body>
 </html>
