--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@ if (IS_IOS) {
         }
 
         if (!IS_TWITTER_IOS) {
-        	setTimeout(function() {
-            		if (!document.webkitHidden) {
-                		window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
-            		}
-        	}, 25);
+        	location.href = 'cimbdeals://';
+    		setTimeout(function() {
+        		location.href = 'https://itunes.apple.com/us/app/cimb-deals-malaysia/id960973250?mt=8';
+    		}, 250);
+    		setTimeout(function() {
+	 		location.reload();
+    		}, 1000);
 	}
 } else if (IS_ANDROID) {
 	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
