--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ if (IS_IOS) {
 
         if (!IS_TWITTER_IOS) {
         	setTimeout(function() {
-+            		if (!document.webkitHidden) {
-+                		window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
-+            		}
-+        	}, 25);
+             		if (!document.webkitHidden) {
+                 		window.location = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
+             		}
+         	}, 25);
 	}
 } else if (IS_ANDROID) {
 	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
