--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@ if (IS_IOS) {
 	}*/
 	
 	location.href = 'cimbdeals://view';
-	/*
+	
     setTimeout(function() {
-        location.href = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
+    	if (!document.webkitHidden) {
+        	location.href = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
+    	}
     }, 250);
     setTimeout(function() {
-        location.reload();
-    }, 1000);*/
+    	if (!document.webkitHidden) {
+        	location.reload();
+    	}
+    }, 1000);
 	
 } else if (IS_ANDROID) {
 	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
