--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@ if (IS_IOS) {
 	}*/
 	
 	location.href = 'cimbdeals://view';
+	var openTime = new Date().getTime();
 	
     setTimeout(function() {
-    	if (!document.webkitHidden) {
+    	if (!document.webkitHidden && (new Date().getTime()-openTime<350)) {
         	location.href = 'https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8';
     	}
     }, 250);
     setTimeout(function() {
-    	if (!document.webkitHidden) {
+    	if (!document.webkitHidden && (new Date().getTime()-openTime<1100)) {
         	location.reload();
     	}
     }, 1000);
