--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta property="al:ios:app_name" content="CIMB Deals" />
 <meta property="og:title" content="Testing 123" />
 <meta property="og:type" content="website" />
+<meta property="al:web:should_fallback" content="false" />
 </head>
 <body>
 test
