--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:app:name:googleplay" content="CIMB Deals" />
 <meta name="twitter:app:id:googleplay" content="net.cyber_village.creditcard" />
 <meta name="twitter:app:url:googleplay" content="cimbdeals://promotion?id=XXX" />
-<meta property="al:ios:url" content="cimbdeals://" />
+<meta property="al:ios:url" content="cimbdeals://promotion?id=256" />
 <meta property="al:ios:app_store_id" content="328803038" />
 <meta property="al:ios:app_name" content="CIMB Deals" />
 <meta property="og:title" content="Testing 123" />
