--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ if (IS_IOS) {
          	}, 25);
 	}*/
 	
-	location.href = 'cimbdeals://view';
+	location.href = 'cimbdeals://promotion?id=1024';
 	var openTime = new Date().getTime();
 	
     setTimeout(function() {
