--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="al:ios:app_store_id" content="328803038" />
 <meta property="al:ios:app_name" content="CIMB Deals" />
 <meta property="al:android:url" content="cimbdeals://promotion?id=1024" />
-<meta property="al:android:package" content="com.cimb.cimbdeals" />
+<meta property="al:android:package" content="net.cyber_village.creditcard" />
 <meta property="al:android:app_name" content="CIMB Deals" />
 <meta property="og:title" content="Testing 123" />
 <meta property="og:type" content="website" />
