--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <meta property="og:title" content="Testing 123" />
 <meta property="og:type" content="website" />
 <meta property="al:web:should_fallback" content="false" />
+</head>
+<body>
+<div style="display: block; text-align: center;">
+  <a id="downloadButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 3em; padding: 1em 2em; width: auto; background-color: #2c7caa;  color: #fff !important; text-decoration:none;" href="#">Download CIMB Deals</a>
+</div>
 <script>
 var destination;
 var promo_id = decodeURIComponent((new RegExp('[?|&]' + 'id' + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
@@ -68,9 +73,7 @@ if (IS_IOS) {
 	
 } else if (IS_ANDROID) {
 	destination = "http://play.google.com/store/apps/details?id=com.cimb.cimbdeals&hl=en";
-	
-	alert(navigator.userAgent);
-	
+
 	if (IS_TWITTER_ANDROID) {
 		window.location = "cimbdeals://promotion?id="+promo_id;
 	} else {
@@ -86,12 +89,7 @@ if (IS_IOS) {
 	destination = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 	window.location = "https://itunes.apple.com/my/app/cimb-deals/id960973250?mt=8";
 }
-</script>
-</head>
-<body>
-<div style="display: block; text-align: center;">
-  <a id="downloadButton" style="border: none; border-radius: 3em; box-shadow: 2px 2px 2px rgba(0,0,0,0.2); display: inline-block; font-size: 3em; padding: 1em 2em; width: auto; background-color: #2c7caa;  color: #fff !important; text-decoration:none;" href="#">Download CIMB Deals</a>
-</div>
-<script>document.getElementById('downloadButton').href=destination;</script>	
+
+document.getElementById('downloadButton').href=destination;</script>
 </body>
 </html>
